--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,15 +13,15 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
-    "aws-cdk": "2.1000.3",
+    "@types/node": "^22.14.1",
+    "aws-cdk": "^2.1010.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.180.0",
+    "aws-cdk-lib": "^2.189.1",
     "constructs": "^10.0.0",
     "dotenv": "^16.4.7"
   }
