temporary fix: Tool use works even 6 hours after deployment (temp credentials expire)  (#17)
* temp fix: Restart ECS task every 5 hours to force all the credentials to be refreshed until the Python SDK can handle automatic credentials refresh

* cleanup: remove the backend credentials retrieve logic for every session to simplify BedrockStreamManager

---------

Co-authored-by: Shuto Araki <shuaraki@amazon.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 frontend/dist/**
 cdk.context.json
+.roo
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,visualstudiocode,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,visualstudiocode,node
