Improve local development workflow (#20)
* Improve local development workflow

Updated `npm run dev` to build and start both backend and frontend,
while bypassing Cognito authentication.

Both Vite frontend and the Python backend will restart/reload on
file changes made to the local code.

For AWS authentication, local AWS credential environment variables are
used to calling of Nova S2S.

Other changes
- switch to a smaller base Docker image, reducing container size
  from 1.2GB to 200MB

---------

Co-authored-by: Shuto Araki <shuaraki@amazon.com>

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.12
+FROM python:3.13-alpine
 
 WORKDIR /app
 
@@ -6,8 +6,8 @@ WORKDIR /app
 COPY requirements.txt ./
 
 # Install dependencies
+RUN apk add --update jq curl py-pip inotify-tools
 RUN pip install --no-cache-dir -r requirements.txt
-RUN apt-get update && apt-get install -y jq curl 
 
 # Copy the Python files and .env
 COPY nova_s2s_backend.py knowledge_base_lookup.py retrieve_user_profile.py cognito.py entrypoint.sh .env ./
@@ -19,6 +19,3 @@ ENV LOGLEVEL=INFO
 
 RUN chmod +x entrypoint.sh
 ENTRYPOINT ["./entrypoint.sh"]
-
-# Command to run the application
-CMD ["python", "nova_s2s_backend.py"]
