--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 frontend/dist/**
 cdk.context.json
 .roo
+frontend/config.js
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,visualstudiocode,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,visualstudiocode,node
