--- a/template.env
+++ b/template.env
@@ -1,4 +1,4 @@
 ENV=""
 VPC_ID=""
-KNOWLEDGE_BASE_ID=""
-DYNAMODB_TABLE_NAME=""
+KNOWLEDGE_BASE_ID="TOBW155M1S"
+DYNAMODB_TABLE_NAME="exact-sciences-patient"
