--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,6 +11,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the Python files and .env
 COPY nova_s2s_backend.py knowledge_base_lookup.py retrieve_user_profile.py cognito.py entrypoint.sh .env ./
+COPY  ./data/patients.json ./data/patients.json
+COPY patient_db.py ./
 
 # Expose the WebSocket port
 EXPOSE 80
